Revision history for Perl module Net::MAC::Vendor

	* Compress::Bzip2 and Compress::Zlib are now optional prerequisites if
	PUREPERL_ONLY=1 is specified as a Makefile.PL argument (or e.g. via `cpanm --pureperl`,
	or PERL_MM_OPT=PUREPERL_ONLY=1 in the environment).
	* fix warning from use of deprecated Mojo interface

1.262 2017-08-10T06:45:18Z
	* Fix docs for load_cache (GitHub #23, Matt W.). Mojo::UserAgent
	doesn't handle file://

1.261 2017-07-18T18:54:10Z
	* Pete Houston (openstrike) improved fetch_oui_from_custom

1.260_03 2017-06-17T07:48:56Z
	* Try harder not to blow up tests when the network is not available

1.260_02 2017-06-09T09:00:20Z
	* Fix an errant get() call (GitHub #19 - openstrike)

1.260_01 2016-11-14T16:07:53Z
	* Fix issue with cache loading (Github #11 https://github.com/briandfoy/net-mac-vendor/issues/11)

1.26 2015-11-23T04:38:00Z
	* Bump to stable release

1.25_01 2015-11-18T04:55:45Z
	* If the tests can't connect to the fragile IEEE service,
	don't freak out.

1.25 2015-09-08T08:25:40Z
	* Bump to user version
	* CPAN Testers is down, so I hope this works.

1.24_04 2015-09-05T06:24:15Z
	* Migrate to Mojolicious for network stuff
	* Start an abstraction of the cache so others can override it
	* load_cache no longer falls back. If your source isn't there,
	it fails.

1.24_02 2015-08-08T07:51:40Z
	* Update for new IEEE URLs. Again.

1.24_01 - Sun Jan 11 07:03:57 2015
	* Fix RT #101011: Line endings are now CRLF

1.23 - 2014-11-13
	* IEEE now uses https (fixed by Frank071)
	* Cache in a file instead of a db (added by Frank071)

1.21 - 2014-01-03
	* Get rid of MYMETA

1.20 - 2013-10-03
	* Bump to release version

1.19_03 - 2013-10-01
	* Fix a test for a change in the OUI data: RT #89110

1.19_02 - 2012-11-20
	* Remove bad line from MANIFEST
	* Add encodingto Pod

1.1901 - 2012-09-03
	* Get rid of DBM::Deep. Do your own persistence. This is a
	big speedup.
	* Fix some odd parsing cases with PRIVATE records
	(RT 79369)

1.18 - 2007-10-27