@@ -1,34 +1,6 @@
-!Build/
-*.bak
-*.bbproj
-*.bs
-*.o
-*.old
-*.rej
-*.tar
-*.tar.gz
-*.tgz
-*.zip
-.DS_Store
-.last_cover_stats
-.prove
+/mac_oui.db
+/.ackrc
 /.build/
-/MANIFEST.bak
-/META.*
-/MYMETA.*
-/Makefile
-/Makefile.old
-/blib/
-/pm_to_blib
-Build
-Build.bat
-MYMETA*
-Makefile
-_build/
-blib
-cover_db/
-inc/
-mac_oui.db
-nytprof.out
-pm_to_blib
-Net-*
+/.latest
+/Net-MAC-Vendor-*/
+/Net-MAC-Vendor-*.tar.gz
