@@ -1,4 +1,0 @@
-cpan_user BDFOY
-sf_user comdog
-sf_group_id 36221
-sf_package_id 128630
