@@ -1,6 +1,0 @@
-README\.pod
-README.*
-
-# things that might be in local directories after fooling
-# around with them
-\.DS_Store
