@@ -1,0 +1,31 @@
+name                = Net-MAC-Vendor
+author              = brian d foy <bdfoy@cpan.org>
+copyright_holder    = brian d foy
+copyright_year      = 2004
+license             = Artistic_2_0
+
+[@Author::ETHER]
+:version = 0.119
+installer = MakeMaker
+-remove = Test::NoTabs
+Test::MinimumVersion.max_target_perl = 5.010
+License.filename = LICENSE
+; don't distribute experiments
+Git::GatherDir.exclude_match[0] = ^scratch/
+; don't distribute the old OUI files
+Git::GatherDir.exclude_match[1] = ^extras/.*\.gz
+; this doesn't seem to be a problem anymore, and it not being a
+; problem is a problem
+Git::GatherDir.exclude_filename = t/rt79369.t
+
+[Prereqs / RuntimeRecommends]
+Compress::Bzip2 = 0
+Compress::Zlib = 0
+
+[DynamicPrereqs]
+:version = 0.018
+-delimiter = |
+-body = |if (can_xs() and not want_pp()) {
+-body = |  requires('Compress::Bzip2');
+-body = |  requires('Compress::Zlib');
+-body = |}
