@@ -1,12 +1,0 @@
-compile.t
-pod.t
-pod_coverage.t
-normalize_mac.t
-oui.t
-fetch_oui_from_ieee.t
-fetch_oui_from_custom.t
-extract_oui_from_html.t
-parse_oui.t
-fetch_oui.t
-load_cache.t
-run.t
