@@ -4,6 +4,7 @@ Revision history for Perl module Net::MAC::Vendor
 	PUREPERL_ONLY=1 is specified as a Makefile.PL argument (or e.g. via `cpanm --pureperl`,
 	or PERL_MM_OPT=PUREPERL_ONLY=1 in the environment).
 	* fix warning from use of deprecated Mojo interface
+	* convert packaging to Dist::Zilla, now released by ether
 
 1.262 2017-08-10T06:45:18Z
 	* Fix docs for load_cache (GitHub #23, Matt W.). Mojo::UserAgent
